--- a/notebooks/01_grpo_local.ipynb
+++ b/notebooks/01_grpo_local.ipynb
@@ -1170,7 +1170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tunix-hack",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
